# MedPruner

./: .gitignore  LICENSE  README.md  README_CN.md  requirements.txt
MedUniEval/: LLMs.py  README.md  cal_report_metrics_3DRad.py  eval.py  eval.sh  eval_M3D_chunked.sh
MedUniEval/models/HuluMed_Qwen2/: HuluMed_Qwen2.py  HuluMed_Qwen2_vllm.py
MedUniEval/models/MedGemma/: MedGemma.py  MedGemma_vllm.py  test.py
MedUniEval/models/Qwen2_5_VL/: Qwen2_5_VL_hf.py
MedUniEval/models/Qwen3_VL/: Qwen3_VL_hf.py  Qwen3_VL_vllm.py
MedUniEval/utils/: base_dataset.py  eval_3d.py  mm_utils.py
MedUniEval/utils/Amos/: Amos.py
MedUniEval/utils/M3D/: M3D.py
MedUniEval/utils/Metrics_Compute/: cal_report_metrics.py
MedUniEval/utils/Rad3D/: Rad3D.py
config/: config.json
demo/: Medgemma3.py  Qwen3VL.py  hulu.py
medpruner/: Qwen3VL.py  __init__.py  pyproject.toml  utils.py
medpruner/Hulu/: __init__.py  configuration_hulumed_qwen2.py  hulumed_qwen2.py  modeling_hulumed_encoder.py  modeling_qwen2.py
medpruner/MedGemma/: __init__.py  configuration_gemma3.py  configuration_gemma3_encoder.py  gemma3.py  modeling_siglip.py
